feat: Update What to Eat descriptions and add delivery platform integration feature

--- a/public/apps/what-to-eat/index.html
+++ b/public/apps/what-to-eat/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>機會命運餐 v2.2｜What to Eat - ELLEZ LLC</title>
+  <title>機會命運餐 v2.2 | What to Eat - ELLEZ LLC</title>
   <meta name="description" content="選擇困難救星：定位搜尋＋隨機轉盤＋收藏與美食日記。免費版、去廣告、Pro 訂閱，多種方案任你選。專為 iOS 用戶打造的智能餐廳推薦 App。">
   <meta name="keywords" content="美食,隨機選餐,選擇困難症,機會命運餐,餐廳 App,iOS,What to Eat,ELLEZ">
 
@@ -12,8 +12,8 @@
   <link rel="icon" href="/LOGO-.png" type="image/png" />
 
   <!-- OG -->
-  <meta property="og:title" content="機會命運餐 v2.2｜What to Eat - ELLEZ LLC">
-  <meta property="og:description" content="定位搜尋＋隨機轉盤＋收藏與美食日記。Free / No-Ads / Pro 三種方案。">
+  <meta property="og:title" content="機會命運餐 v2.2 | What to Eat - ELLEZ LLC">
+  <meta property="og:description" content="定位搜尋＋隨機轉盤＋收藏與美食日記。提供免費版、終身去廣告版、訂閱版。">
   <meta property="og:image" content="images/og-cover.png">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://ellez.com/apps/what-to-eat">
@@ -29,9 +29,9 @@
     "author": {"@type":"Organization","name":"ELLEZ LLC"},
     "offers": [
       {"@type":"Offer","price":"0","priceCurrency":"USD","name":"Free"},
-      {"@type":"Offer","name":"No-Ads","price":"99","priceCurrency":"USD"},
-      {"@type":"Offer","name":"Pro (Monthly)","price":"3.99","priceCurrency":"USD"},
-      {"@type":"Offer","name":"Pro (Yearly)","price":"24.99","priceCurrency":"USD"}
+      {"@type":"Offer","name":"No-Ads (Lifetime)","price":"99.99","priceCurrency":"USD"},
+      {"@type":"Offer","name":"Pro (Monthly)","price":"0.99","priceCurrency":"USD"},
+      {"@type":"Offer","name":"Pro (Yearly)","price":"9.99","priceCurrency":"USD"}
     ],
     "url":"https://ellez.com/apps/what-to-eat"
   }
@@ -60,7 +60,7 @@
           </div>
 
           <a class="btn btn-primary" href="https://apps.apple.com/tw/app/%E6%A9%9F%E6%9C%83%E5%91%BD%E9%81%8B%E9%A4%90/id6752467498" target="_blank" rel="noopener">
-            📱 App Store 下載
+            App Store 下載
           </a>
         </nav>
       </div>
@@ -83,13 +83,13 @@
         </div>
 
         <div class="ring" aria-hidden="true">
-          <a href="#features" class="spin">🎯 開始探索</a>
+          <a href="#features" class="spin">開始探索</a>
         </div>
 
         <div class="hero-ctas">
-          <a class="btn btn-primary" href="https://apps.apple.com/tw/app/%E6%A9%9F%E6%9C%83%E5%91%BD%E9%81%8B%E9%A4%90/id6752467498" target="_blank" rel="noopener">📱 立即下載</a>
-          <a class="btn btn-ghost" href="./privacy.html">🔒 查看隱私政策</a>
-          <a class="btn btn-ghost" href="./terms.html">📋 使用條款</a>
+          <a class="btn btn-primary" href="https://apps.apple.com/tw/app/%E6%A9%9F%E6%9C%83%E5%91%BD%E9%81%8B%E9%A4%90/id6752467498" target="_blank" rel="noopener">立即下載</a>
+          <a class="btn btn-ghost" href="./privacy.html">查看隱私政策</a>
+          <a class="btn btn-ghost" href="./terms.html">使用條款</a>
         </div>
       </div>
     </section>
@@ -98,11 +98,11 @@
     <section class="container">
       <div class="lang-content" data-lang="zh">
         <h2 class="text-center">為什麼選擇機會命運餐？</h2>
-        <p class="lead text-center">提供 Free / No-Ads / Pro 多種方案，重視合規與隱私（GDPR/CCPA）。</p>
+        <p class="lead text-center">提供免費版、終身去廣告版、訂閱版多種方案，重視合規與隱私（GDPR/CCPA）。</p>
       </div>
       <div class="lang-content hidden" data-lang="en">
         <h2 class="text-center">Why Choose What to Eat?</h2>
-        <p class="lead text-center">Multiple plans (Free / No-Ads / Pro), privacy-focused and GDPR/CCPA compliant.</p>
+        <p class="lead text-center">Multiple plans (Free, Lifetime No-Ads, Subscription), privacy-focused and GDPR/CCPA compliant.</p>
       </div>
     </section>
 
@@ -112,32 +112,37 @@
         <h2>核心功能特色</h2>
         <div class="features">
           <article class="card feature-card">
-            <span class="feature-icon">📍</span>
+            <span class="feature-icon">定位</span>
             <h3>智能定位搜尋</h3>
             <p>Apple MapKit（可選 Google Places）找出 1–3 公里內餐廳/咖啡廳，支援多條件篩選。</p>
           </article>
           <article class="card feature-card">
-            <span class="feature-icon">🎰</span>
+            <span class="feature-icon">轉盤</span>
             <h3>隨機轉盤決策</h3>
             <p>一鍵抽籤幫你做決定；支援候選上限與快取 TTL，Pro 享更高上限。</p>
           </article>
           <article class="card feature-card">
-            <span class="feature-icon">⭐</span>
+            <span class="feature-icon">收藏</span>
             <h3>個人收藏夾</h3>
-            <p>喜愛店家分組、分享；Pro 提供進階管理與匯出/匯入。</p>
+            <p>喜愛店家分組。</p>
           </article>
           <article class="card feature-card">
-            <span class="feature-icon">📖</span>
+            <span class="feature-icon">日記</span>
             <h3>美食日記系統</h3>
-            <p>評分、價格、心得、照片與標籤；Pro 提供統計與匯出。</p>
+            <p>評分、價格、心得、照片與標籤。</p>
           </article>
           <article class="card feature-card">
-            <span class="feature-icon">💎</span>
+            <span class="feature-icon">方案</span>
             <h3>彈性升級方案</h3>
-            <p>Free / No-Ads（買斷）/ Pro（月/年）；StoreKit 2 支援恢復購買。</p>
+            <p>提供免費版、終身去廣告版（買斷）、訂閱版（月/年）；StoreKit 2 支援恢復購買。</p>
           </article>
           <article class="card feature-card">
-            <span class="feature-icon">🔒</span>
+            <span class="feature-icon">外送</span>
+            <h3>外送平台整合</h3>
+            <p>全新功能：結果可自動轉跳至外送平台服務。</p>
+          </article>
+          <article class="card feature-card">
+            <span class="feature-icon">隱私</span>
             <h3>隱私與合規</h3>
             <p>整合 AdMob + UMP，尊重個人化/非個人化選擇，符合 GDPR/CCPA。</p>
           </article>
@@ -170,7 +175,12 @@
           <article class="card feature-card">
             <span class="feature-icon">💎</span>
             <h3>Flexible Plans</h3>
-            <p>Free / No-Ads (one-time) / Pro (monthly/yearly), StoreKit 2 restore.</p>
+            <p>Free version, lifetime no-ads (one-time purchase), subscription (monthly/yearly). StoreKit 2 restore support.</p>
+          </article>
+          <article class="card feature-card">
+            <span class="feature-icon">🚚</span>
+            <h3>Delivery Platform Integration</h3>
+            <p>New feature: Auto-redirect to food delivery platforms from results.</p>
           </article>
           <article class="card feature-card">
             <span class="feature-icon">🔒</span>
@@ -224,35 +234,36 @@
             <div class="plan-price"><span class="currency">$</span>0</div>
             <p class="plan-period">永久免費</p>
             <ul class="plan-features">
-              <li>候選上限 10 間</li><li>快取 TTL 30 分</li><li>基本篩選</li><li>顯示廣告</li>
-              <li>基本收藏</li><li>基本美食日記</li>
+              <li>移除所有廣告</li>
+              <li>更流暢、簡潔的體驗</li>
             </ul>
             <a class="btn btn-ghost" href="https://apps.apple.com/tw/app/%E6%A9%9F%E6%9C%83%E5%91%BD%E9%81%8B%E9%A4%90/id6752467498" target="_blank">免費下載</a>
           </div>
 
           <div class="plan">
-            <h3 class="plan-name">去廣告版</h3>
-            <div class="plan-price"><span class="currency">$</span>99</div>
+            <h3 class="plan-name">去廣告（終身）</h3>
+            <div class="plan-price"><span class="currency">$</span>99<span style="font-size:20px">.99</span></div>
             <p class="plan-period">一次性購買</p>
             <ul class="plan-features">
-              <li>含 Free 全部功能</li><li>移除廣告</li><li>更流暢體驗</li><li>支持開發</li>
+              <li>移除所有廣告</li>
+              <li>更流暢、簡潔的體驗</li>
             </ul>
-            <a class="btn btn-primary" href="https://apps.apple.com/tw/app/%E6%A9%9F%E6%9C%83%E5%91%BD%E9%81%8B%E9%A4%90/id6752467498" target="_blank">購買去廣告</a>
+            <a class="btn btn-primary" href="https://apps.apple.com/tw/app/%E6%A9%9F%E6%9C%83%E5%91%BD%E9%81%8B%E9%A4%90/id6752467498" target="_blank">購買</a>
           </div>
 
           <div class="plan recommended">
-            <span class="badge pro">最推薦</span>
-            <h3 class="plan-name">Pro 專業版</h3>
-            <div class="plan-price"><span class="currency">$</span>24<span style="font-size:20px">.99</span></div>
-            <p class="plan-period">年訂閱（省 45%）</p>
+            <span class="badge pro">最超值</span>
+            <h3 class="plan-name">去廣告（年訂閱）</h3>
+            <div class="plan-price"><span class="currency">$</span>9<span style="font-size:20px">.99</span><span style="font-size:16px"> / 年</span></div>
+            <p class="plan-period">自動續訂</p>
             <ul class="plan-features">
-              <li>候選上限 20 間</li><li>快取 TTL 60 分</li><li>進階搜尋與篩選</li>
-              <li>無廣告</li><li>進階收藏</li><li>日記統計</li><li>匯出/匯入</li><li>優先客服</li>
+              <li>移除所有廣告</li>
+              <li>更流暢、簡潔的體驗</li>
             </ul>
             <div class="mt-3">
-              <a class="btn btn-primary" href="https://apps.apple.com/tw/app/%E6%A9%9F%E6%9C%83%E5%91%BD%E9%81%8B%E9%A4%90/id6752467498" target="_blank">年訂 $24.99</a>
-              <a class="btn btn-ghost mt-1" href="https://apps.apple.com/tw/app/%E6%A9%9F%E6%9C%83%E5%91%BD%E9%81%8B%E9%A4%90/id6752467498" target="_blank">月訂 $3.99</a>
+              <a class="btn btn-primary" href="https://apps.apple.com/tw/app/%E6%A9%9F%E6%9C%83%E5%91%BD%E9%81%8B%E9%A4%90/id6752467498" target="_blank">立即升級（去廣告）</a>
             </div>
+            <p style="margin-top:12px; font-size:14px; opacity:0.7;">另有月訂閱 $0.99 / 月</p>
           </div>
         </div>
         <p class="lead text-center mt-4">* 價格可能因地區而異，實際以 App Store 顯示為準。</p>
@@ -293,13 +304,13 @@
     <section class="container">
       <div class="banner" role="region" aria-label="Legal">
         <div class="lang-content" data-lang="zh">
-          <strong>📋 相關文件：</strong>
+          <strong>相關文件：</strong>
           <a href="./privacy.html">隱私政策</a> ·
           <a href="./terms.html">使用條款</a> ·
           <a href="mailto:ellez.tech.2023@gmail.com">聯絡我們</a>
         </div>
         <div class="lang-content hidden" data-lang="en">
-          <strong>📋 Documents:</strong>
+          <strong>Documents:</strong>
           <a href="./privacy.html">Privacy Policy</a> ·
           <a href="./terms.html">Terms of Service</a> ·
           <a href="mailto:ellez.tech.2023@gmail.com">Contact Us</a>
