fix: Correct logo path, remove emojis from English version, add white color to hero text

--- a/public/apps/what-to-eat/index.html
+++ b/public/apps/what-to-eat/index.html
@@ -1,8 +1,16 @@
 <!doctype html>
 <html lang="zh-Hant" id="top">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="ut        <div class="lang-content" data-lang="zh">
+          <h1 style="color: white;">機會命運餐 v2.2</h1>
+          <p class="lead" style="color: white;">專為「選擇困難症」打造的智能隨機餐廳 App<br>
+            結合 <strong>定位搜尋</strong>、<strong>隨機轉盤</strong>、<strong>個人收藏夾</strong> 與 <strong>美食日記</strong></p>
+        </div>
+        <div class="lang-content hidden" data-lang="en">
+          <h1 style="color: white;">What to Eat v2.2</h1>
+          <p class="lead" style="color: white;">Smart Random Restaurant Discovery App for "Choice Paralysis"<br>
+            Combining <strong>Location Search</strong>, <strong>Random Wheel</strong>, <strong>Favorites</strong> & <strong>Food Diary</strong></p>
+        </div><meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>機會命運餐 v2.2 | What to Eat - ELLEZ LLC</title>
   <meta name="description" content="選擇困難救星：定位搜尋＋隨機轉盤＋收藏與美食日記。免費版、去廣告、Pro 訂閱，多種方案任你選。專為 iOS 用戶打造的智能餐廳推薦 App。">
   <meta name="keywords" content="美食,隨機選餐,選擇困難症,機會命運餐,餐廳 App,iOS,What to Eat,ELLEZ">
@@ -44,7 +52,7 @@
     <div class="container">
       <div class="nav-content">
         <a href="../../index.html" class="nav-logo" aria-label="返回 ELLEZ LLC 首頁">
-          <img src="/LOGO-.png" alt="ELLEZ LLC" style="width:32px;height:32px">
+          <img src="/assets/images/LOGO-.png" alt="ELLEZ LLC" style="width:32px;height:32px">
           <span>ELLEZ</span>
         </a>
 
@@ -153,37 +161,37 @@
         <h2>Core Features</h2>
         <div class="features">
           <article class="card feature-card">
-            <span class="feature-icon">📍</span>
+            <span class="feature-icon">Location</span>
             <h3>Smart Location Search</h3>
-            <p>Apple MapKit (optional Google Places) within 1–3km with multi-filter support.</p>
+            <p>Apple MapKit (optional Google Places) within 1-3km with multi-filter support.</p>
           </article>
           <article class="card feature-card">
-            <span class="feature-icon">🎰</span>
+            <span class="feature-icon">Wheel</span>
             <h3>Random Wheel</h3>
-            <p>One-tap decision with candidate limits & cache TTL; higher limits on Pro.</p>
+            <p>One-tap decision with candidate limits & cache TTL.</p>
           </article>
           <article class="card feature-card">
-            <span class="feature-icon">⭐</span>
+            <span class="feature-icon">Favorites</span>
             <h3>Favorites</h3>
-            <p>Group & share favorite places; Pro adds advanced management/export.</p>
+            <p>Group favorite places.</p>
           </article>
           <article class="card feature-card">
-            <span class="feature-icon">📖</span>
+            <span class="feature-icon">Diary</span>
             <h3>Food Diary</h3>
-            <p>Ratings, price, notes, photos & tags; Pro offers stats & export.</p>
+            <p>Ratings, price, notes, photos & tags.</p>
           </article>
           <article class="card feature-card">
-            <span class="feature-icon">💎</span>
+            <span class="feature-icon">Plans</span>
             <h3>Flexible Plans</h3>
             <p>Free version, lifetime no-ads (one-time purchase), subscription (monthly/yearly). StoreKit 2 restore support.</p>
           </article>
           <article class="card feature-card">
-            <span class="feature-icon">🚚</span>
+            <span class="feature-icon">Delivery</span>
             <h3>Delivery Platform Integration</h3>
             <p>New feature: Auto-redirect to food delivery platforms from results.</p>
           </article>
           <article class="card feature-card">
-            <span class="feature-icon">🔒</span>
+            <span class="feature-icon">Privacy</span>
             <h3>Privacy & Compliance</h3>
             <p>AdMob + UMP, GDPR/CCPA compliant, respects personalization choices.</p>
           </article>
@@ -203,7 +211,7 @@
             <tr><td>搜尋篩選</td><td>基本</td><td>基本</td><td>進階</td></tr>
             <tr><td>廣告</td><td>顯示</td><td>無</td><td>無</td></tr>
             <tr><td>收藏</td><td>基本</td><td>基本</td><td>進階</td></tr>
-            <tr><td>美食日記</td><td>基本</td><td>基本</td><td>進階＋統計</td></tr>
+            <tr><td>美食日記</td><td>基本</td><td>基本</td><td>進階</td></tr>
           </tbody>
         </table>
       </div>
@@ -218,7 +226,7 @@
             <tr><td>Filters</td><td>Basic</td><td>Basic</td><td>Advanced</td></tr>
             <tr><td>Ads</td><td>Yes</td><td>No</td><td>No</td></tr>
             <tr><td>Favorites</td><td>Basic</td><td>Basic</td><td>Advanced</td></tr>
-            <tr><td>Food Diary</td><td>Basic</td><td>Basic</td><td>Advanced + Analytics</td></tr>
+            <tr><td>Food Diary</td><td>Basic</td><td>Basic</td><td>Advanced</td></tr>
           </tbody>
         </table>
       </div>
