fix: Complete English translation and restore proper HTML structure

--- a/public/apps/what-to-eat/index.html
+++ b/public/apps/what-to-eat/index.html
@@ -1,16 +1,8 @@
 <!doctype html>
 <html lang="zh-Hant" id="top">
 <head>
-  <meta charset="ut        <div class="lang-content" data-lang="zh">
-          <h1 style="color: white;">機會命運餐 v2.2</h1>
-          <p class="lead" style="color: white;">專為「選擇困難症」打造的智能隨機餐廳 App<br>
-            結合 <strong>定位搜尋</strong>、<strong>隨機轉盤</strong>、<strong>個人收藏夾</strong> 與 <strong>美食日記</strong></p>
-        </div>
-        <div class="lang-content hidden" data-lang="en">
-          <h1 style="color: white;">What to Eat v2.2</h1>
-          <p class="lead" style="color: white;">Smart Random Restaurant Discovery App for "Choice Paralysis"<br>
-            Combining <strong>Location Search</strong>, <strong>Random Wheel</strong>, <strong>Favorites</strong> & <strong>Food Diary</strong></p>
-        </div><meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>機會命運餐 v2.2 | What to Eat - ELLEZ LLC</title>
   <meta name="description" content="選擇困難救星：定位搜尋＋隨機轉盤＋收藏與美食日記。免費版、去廣告、Pro 訂閱，多種方案任你選。專為 iOS 用戶打造的智能餐廳推薦 App。">
   <meta name="keywords" content="美食,隨機選餐,選擇困難症,機會命運餐,餐廳 App,iOS,What to Eat,ELLEZ">
@@ -161,37 +153,37 @@
         <h2>Core Features</h2>
         <div class="features">
           <article class="card feature-card">
-            <span class="feature-icon">Location</span>
+            <span class="feature-icon">📍</span>
             <h3>Smart Location Search</h3>
-            <p>Apple MapKit (optional Google Places) within 1-3km with multi-filter support.</p>
+            <p>Apple MapKit (optional Google Places) within 1–3km with multi-filter support.</p>
           </article>
           <article class="card feature-card">
-            <span class="feature-icon">Wheel</span>
+            <span class="feature-icon">🎰</span>
             <h3>Random Wheel</h3>
-            <p>One-tap decision with candidate limits & cache TTL.</p>
+            <p>One-tap decision with candidate limits & cache TTL; higher limits on Pro.</p>
           </article>
           <article class="card feature-card">
-            <span class="feature-icon">Favorites</span>
+            <span class="feature-icon">⭐</span>
             <h3>Favorites</h3>
-            <p>Group favorite places.</p>
+            <p>Group & share favorite places; Pro adds advanced management/export.</p>
           </article>
           <article class="card feature-card">
-            <span class="feature-icon">Diary</span>
+            <span class="feature-icon">📖</span>
             <h3>Food Diary</h3>
-            <p>Ratings, price, notes, photos & tags.</p>
+            <p>Ratings, price, notes, photos & tags; Pro offers stats & export.</p>
           </article>
           <article class="card feature-card">
-            <span class="feature-icon">Plans</span>
+            <span class="feature-icon">💎</span>
             <h3>Flexible Plans</h3>
             <p>Free version, lifetime no-ads (one-time purchase), subscription (monthly/yearly). StoreKit 2 restore support.</p>
           </article>
           <article class="card feature-card">
-            <span class="feature-icon">Delivery</span>
+            <span class="feature-icon">🚚</span>
             <h3>Delivery Platform Integration</h3>
             <p>New feature: Auto-redirect to food delivery platforms from results.</p>
           </article>
           <article class="card feature-card">
-            <span class="feature-icon">Privacy</span>
+            <span class="feature-icon">🔒</span>
             <h3>Privacy & Compliance</h3>
             <p>AdMob + UMP, GDPR/CCPA compliant, respects personalization choices.</p>
           </article>
@@ -211,7 +203,7 @@
             <tr><td>搜尋篩選</td><td>基本</td><td>基本</td><td>進階</td></tr>
             <tr><td>廣告</td><td>顯示</td><td>無</td><td>無</td></tr>
             <tr><td>收藏</td><td>基本</td><td>基本</td><td>進階</td></tr>
-            <tr><td>美食日記</td><td>基本</td><td>基本</td><td>進階</td></tr>
+            <tr><td>美食日記</td><td>基本</td><td>基本</td><td>進階＋統計</td></tr>
           </tbody>
         </table>
       </div>
@@ -226,7 +218,7 @@
             <tr><td>Filters</td><td>Basic</td><td>Basic</td><td>Advanced</td></tr>
             <tr><td>Ads</td><td>Yes</td><td>No</td><td>No</td></tr>
             <tr><td>Favorites</td><td>Basic</td><td>Basic</td><td>Advanced</td></tr>
-            <tr><td>Food Diary</td><td>Basic</td><td>Basic</td><td>Advanced</td></tr>
+            <tr><td>Food Diary</td><td>Basic</td><td>Basic</td><td>Advanced + Analytics</td></tr>
           </tbody>
         </table>
       </div>
@@ -280,7 +272,42 @@
       <div class="lang-content hidden" data-lang="en">
         <h2 class="text-center">Plans & Pricing</h2>
         <div class="pricing">
-          <!-- 英文三卡，內容同上略 -->
+          <div class="plan">
+            <h3 class="plan-name">Free Version</h3>
+            <div class="plan-price"><span class="currency">$</span>0</div>
+            <p class="plan-period">Forever Free</p>
+            <ul class="plan-features">
+              <li>Remove all ads</li>
+              <li>Smoother, cleaner experience</li>
+            </ul>
+            <a class="btn btn-ghost" href="https://apps.apple.com/tw/app/%E6%A9%9F%E6%9C%83%E5%91%BD%E9%81%8B%E9%A4%90/id6752467498" target="_blank">Free Download</a>
+          </div>
+
+          <div class="plan">
+            <h3 class="plan-name">Ad-Free (Lifetime)</h3>
+            <div class="plan-price"><span class="currency">$</span>99<span style="font-size:20px">.99</span></div>
+            <p class="plan-period">One-time purchase</p>
+            <ul class="plan-features">
+              <li>Remove all ads</li>
+              <li>Smoother, cleaner experience</li>
+            </ul>
+            <a class="btn btn-primary" href="https://apps.apple.com/tw/app/%E6%A9%9F%E6%9C%83%E5%91%BD%E9%81%8B%E9%A4%90/id6752467498" target="_blank">Purchase</a>
+          </div>
+
+          <div class="plan recommended">
+            <span class="badge pro">Best Value</span>
+            <h3 class="plan-name">Ad-Free (Yearly)</h3>
+            <div class="plan-price"><span class="currency">$</span>9<span style="font-size:20px">.99</span><span style="font-size:16px"> / year</span></div>
+            <p class="plan-period">Auto-renewing</p>
+            <ul class="plan-features">
+              <li>Remove all ads</li>
+              <li>Smoother, cleaner experience</li>
+            </ul>
+            <div class="mt-3">
+              <a class="btn btn-primary" href="https://apps.apple.com/tw/app/%E6%A9%9F%E6%9C%83%E5%91%BD%E9%81%8B%E9%A4%90/id6752467498" target="_blank">Upgrade Now (Ad-Free)</a>
+            </div>
+            <p style="margin-top:12px; font-size:14px; opacity:0.7;">Monthly subscription also available at $0.99 / month</p>
+          </div>
         </div>
         <p class="lead text-center mt-4">* Prices may vary by region. Actual prices shown in App Store.</p>
       </div>
